--- a/projectBooking/src/main/resources/datasource-cfg.properties
+++ b/projectBooking/src/main/resources/datasource-cfg.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 jdbc.url=jdbc:sqlserver://localhost:1433;databaseName=booking
-jdbc.username=vanduc
-jdbc.password=tranvanduc1996
+jdbc.username=sa
+jdbc.password=reallyStrongPwd123
 hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 hibernate.format_sql=true
 hibernate.show_sql=true
