--- a/projectBooking/src/main/resources/datasource-cfg.properties
+++ b/projectBooking/src/main/resources/datasource-cfg.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-jdbc.url=jdbc:sqlserver://localhost:1433;databaseName=booking
+jdbc.url=jdbc:sqlserver://localhost:1433;databaseName=booking;characterEncoding=UTF-8
 jdbc.username=sa
 jdbc.password=reallyStrongPwd123
 hibernate.dialect=org.hibernate.dialect.SQLServerDialect
